Give checkboxes height again & fix other bugs
Includes changes to the template list CSS to:
- give the checkbox element has height again
- fix an issue caused by design system changing
  the `box-decoration-break` value to assume all
  lines a link wraps to inherit the initial
  padding
- add padding-left to stop content from the
  template list item wrapping underneath the
  checkbox

The checkboxes currently have a height of 1px,
which interferes with the logic browsers use to
scroll them into view when mostly off-screen.
Because only their first 1px was considered by the
layout, you would often see checkboxes that were
mostly off-screen focused without being scrolled
into view.

The `box-decoration-break` change interferred with
us having padding at the start of links to
folders, to make space for the folder icon. It was
only visible when the links were focused.

--- a/app/assets/stylesheets/components/message.scss
+++ b/app/assets/stylesheets/components/message.scss
@@ -58,18 +58,22 @@ a {
 .template-list {
 
   &-item {
+    display: block;
     margin-bottom: 0;
 
     &-with-checkbox {
+      padding-left: $govuk-touch-target-size + $govuk-checkboxes-label-padding-left-right;
+      min-height: $govuk-touch-target-size;
 
       .template-list-item-hint {
+        width: 100%;
         margin-top: 0;
-        padding-left: ($govuk-checkboxes-label-padding-left-right + $govuk-touch-target-size);
       }
 
       input {
-        margin-right: $govuk-checkboxes-label-padding-left-right;
-        height: 1px;
+        position: absolute;
+        top: 0;
+        left: 0;
       }
     }
 
@@ -84,7 +88,7 @@ a {
         display: block;
         // block focus state for items that have no ancestors
         // our version of dart-sass (< 1.4.0 still parses calc() as a special function
-        // so we need to interpolate it 
+        // so we need to interpolate it
         // https://sass-lang.com/documentation/syntax/special-functions/#element-progid-and-expression
         width: calc(100% - #{$govuk-touch-target-size + $govuk-checkboxes-label-padding-left-right});
 
@@ -194,6 +198,11 @@ a {
 
     @include govuk-media-query($from: tablet) {
       padding-left: 40px;
+    }
+
+    &:focus {
+      -webkit-box-decoration-break: inherit;
+      box-decoration-break: inherit;
     }
 
     &__icon {
